--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" lang="en"></meta>
   <meta name="viewport" content="width=device-width;" />
-  <link rel="icon" href="turbo.png" type="image/png" />
-  <title>overpass turbo - map</title>
+  <!-- link rel="icon" href="turbo.png" type="image/png" / -->
+  <title>Historical Aleksanterinkatu</title>
   <!--jQuery-->
   <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
   <!--lodash-->
